2000-09-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow URL change
	of `ZDNet'.

2000-09-15   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-art.el: Always require `wid-edit'.

2000-09-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-compile): Don't compile gnus-ml.el
	when FSFmacs is running.

	* lisp/gnus-ml.el: Bind some undeclared variables.

	* lisp/gnus-art.el (gnus-article-add-button): Add widget button.
	(gnus-article-display-mime-message): Don't set
	`mime-button-mother-dispatcher'.

	* lisp/message.el: Require `reporter' for the function
	`define-mail-user-agent' when Mule 2.3 is running.

2000-09-07  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* lisp/smiley.el (smiley-buffer, smiley-create-glyph): Work with
	GTK XEmacs as well.

2000-09-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-header-xref): New function.
	(nnshimbun-insert-header): Use `nnshimbun-header-xref', instead of
	`mail-header-xref'.
	(nnshimbun-make-mhonarc-contents): Took a measure against
	unexpected TAB characters.

2000-09-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Add `netbsd' support.
	(nnshimbun-nov-fix-header): Change a form storing Message-Id.
	(nnshimbun-search-id): Ditto.
	(nnshimbun-make-mhonarc-contents): Use optional header
	information.

2000-09-05   Daiki Ueno  <ueno@unixuser.org>

	* lisp/pop3.el (pop3-quit): Don't clear `pop3-uidl-obarray'.
	(pop3-save-uidls): Clear `pop3-uidl-obarray' here.

2000-09-04   Daiki Ueno  <ueno@unixuser.org>

	* lisp/mail-source.el (pop3-leave-mail-on-server): Declare.
	(mail-source-keyword-map): New keyword `:leave' for pop.
	(mail-source-fetch-pop): Refer it.

	* lisp/pop3.el (pop3-ssl-program-name): New variable.

2000-08-31  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (texinfo-multitable-widths,